--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=PROD
+APP_ENV=dev
 APP_SECRET=ed94fd62a77f71d36f2e6973961e7dac
 ###< symfony/framework-bundle ###
 
